tolk-tester/tests/invalid-declaration/err-1794.tolk
get int.seqno(self) {
    return 0;
}

/**
@compilation_should_fail
@stderr invalid declaration of a get method
 */
